--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Azer type</title>
     <script src="script.js"></script>
+    <script src="config.js"></script>
 </head>
 <body>
     
