--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Azer type</title>
-    <script src="script.js"></script>
-    <script src="config.js"></script>
+    <script src="script.js" defer></script>
+    <script src="config.js" defer></script>
 </head>
 <body>
     
