--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <div class="zoneScore">
             Votre score : <span>0</span>
         </div>
+
+        <div class="zonePartage">
+            <button>Partager</button>
+        </div>
         
     </main>
 
